--- a/src/App.css
+++ b/src/App.css
@@ -12,11 +12,11 @@ body {
 
 .container {
   /* padding-top: 10px; */
-  padding-left: 20px;
+  padding-left: 60px;
   height: 100%;
   width: 100%;
   display: flex;
-  background-color: #f5f5f5;
+  background-color: #fbfffe;
 }
 .topPane {
   width: 20%;
