--- a/src/Components/welcomeScreen/style.css
+++ b/src/Components/welcomeScreen/style.css
@@ -1,9 +1,9 @@
 .input {
-  /* padding-left: 70px; */
-  margin-left: 20px;
-  padding: 20px;
-  width: 80%;
-  background-color: #f5f5f5;
+  /* padding-left: 90px; */
+  /* margin-left: 20px; */
+  padding: 25px;
+  width: 78%;
+  background-color: #fbfffe;
   border: none;
   border-bottom: 1px solid lightgray;
 }
@@ -12,21 +12,44 @@
   border-radius: 15px;
   /* background-color: grey; */
   width: 20%;
-  height: 130px;
-  margin-right: 20px;
+  height: 120px;
+  margin-right: 28px;
+  /* padding: 5px; */
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.wrapperBox {
+  border-radius: 15px;
+  width: 20%;
+  height: 115px;
+  padding-left: 5px;
+  padding-right: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: #94a3b7;
+  text-align: center;
+  border: dashed 1px #cad2db;
 }
 
 .head {
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
   align-items: center;
   height: 30px;
-  padding: 10px;
+  padding: 5px;
 }
 
+/* .UpperWrap{
+  display: flex;
+  flex-direction: column;
+} */
 .span {
   text-decoration: underline;
-  border-color: #fdfefe;
+  text-decoration-color: #afb0b1;
+  text-underline-position: under;
 }
 
 .cardtitle {
@@ -40,22 +63,24 @@
 .subtext {
   border-radius: 6px;
   background-color: #fffdfa;
-  width: 35px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   justify-content: center;
   align-items: center;
   text-align: center;
-  margin-right: 6px;
+  margin-right: 12px;
+  /* background-color: yellow; */
 }
 
 .text {
-  font-size: 17px;
+  font-size: 12px;
   text-align: center;
+  /* background-color: green; */
 }
 
 .bottomtext {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 10px;
+  margin-top: 5px;
 }
